--- a/igniteap/templates/uifiles/about.html
+++ b/igniteap/templates/uifiles/about.html
@@ -705,7 +705,7 @@ landscape as a whole.
                 <div class="team-content-wrap slick-dots--light mtn-md-5">
                     <div class="team-mem-item">
                         <figure class="member-pic">
-                            <img src="{% static 'assets/img/team/01.jpg" alt="Team-Businex"/>
+                            <img src="{% static 'assets/img/team/01.jpg' %}" alt="Team-Businex"/>
                         </figure>
                         <div class="member-info">
                             <h5><a href="team-details.html" class="stretched-link">Lucy Farnando</a></h5>
@@ -715,7 +715,7 @@ landscape as a whole.
 
                     <div class="team-mem-item">
                         <figure class="member-pic">
-                            <img src="{% static 'assets/img/team/02.jpg" alt="Team-Businex"/>
+                            <img src="{% static 'assets/img/team/02.jpg' %}" alt="Team-Businex"/>
                         </figure>
                         <div class="member-info">
                             <h5><a href="team-details.html" class="stretched-link">James Anderson</a></h5>
@@ -725,7 +725,7 @@ landscape as a whole.
 
                     <div class="team-mem-item">
                         <figure class="member-pic">
-                            <img src="{% static 'assets/img/team/03.jpg" alt="Team-Businex"/>
+                            <img src="{% static 'assets/img/team/03.jpg' %}" alt="Team-Businex"/>
                         </figure>
                         <div class="member-info">
                             <h5><a href="team-details.html" class="stretched-link">Thomas Nancy</a></h5>
@@ -735,7 +735,7 @@ landscape as a whole.
 
                     <div class="team-mem-item">
                         <figure class="member-pic">
-                            <img src="{% static 'assets/img/team/04.jpg" alt="Team-Businex"/>
+                            <img src="{% static 'assets/img/team/04.jpg' %}" alt="Team-Businex"/>
                         </figure>
                         <div class="member-info">
                             <h5><a href="team-details.html" class="stretched-link">Nail Mathue</a></h5>
@@ -822,7 +822,7 @@ landscape as a whole.
     </div>
 </div> -->
 
-<div class="brand-logo-area sm-top4">
+<!-- <div class="brand-logo-area sm-top4">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -858,44 +858,8 @@ landscape as a whole.
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!--== End Brand Logo Area Wrapper ==-->
 
-<!--== Start Fun Fact Area Wrapper ==-->
-<!-- <div class="fun-fact-area sm-top parallax" data-parallax-speed="0.70" data-bg="{% static 'assets/img/fun-fact-bg.jpg">
-    <div class="container">
-        <div class="row mtn-40">
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">2654</span></h2>
-                    <h6 class="counter-txt">Happy Clients</h6>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">1520</span></h2>
-                    <h6 class="counter-txt">Project Done</h6>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">120</span></h2>
-                    <h6 class="counter-txt">Awards Win</h6>
-                </div>
-            </div>
-
-
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">3580</span></h2>
-                    <h6 class="counter-txt">Cups Coffee</h6>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-<!--== End Fun Fact Area Wrapper ==-->
 {% endblock%}
