--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -13,7 +13,7 @@
                 {%if EventTimer %}
                 <li data-index="rs-27" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0"
                     data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default"
-                    data-thumb="{% static 'assets/img/slider/01_thumb.jpg' %}" data-rotate="0" data-saveperformance="off"
+                    data-thumb="{{ EventTimer.image.url }}" data-rotate="0" data-saveperformance="off"
                     data-title="Slide">
                     <!-- MAIN IMAGE -->
                     <img src="{{ EventTimer.image.url }}" alt="Ignite" data-bgposition="top center"
@@ -422,10 +422,10 @@
         <div class="row service-list">
             {% for item in event %}
             <div class="col-sm-12 col-md-4 mb-5">
-                <div class="card card-flip h-100">
+                <div class="card card-flip h-100" style="border: none; background:black; opacity:1">
                     <div class="card-front" style="background-image: url({{ item.image.url }}); background-size: cover; height: 100%; opacity: 0.7; background-color: rgba(0, 0, 0, 0.945); ">
                         <div class="card-body">
-                            <h3 class="card-title front-title" style="font-size: 25px; color: red">{{ item.title }}</h3>
+                            <h3 class="card-title front-title1" style="margin-top: -15px;">{{ item.title }}</h3>
                         </div>
                     </div>
                     <div class="card-back">
