--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -86,7 +86,8 @@
                                 <p>Seconds</p>
                             </div>
                         </div>
-                        <button class="btn btn-primary"  target="_blank"  href="{{ EventTimer.Upload_url }}">Read More</button>
+                        <button class="btn btn-primary"  target="_blank"  href=""><a href="{{ EventTimer.Upload_url }}">Read More</a></button>
+                
                         </div> 
                         
                 </li>
