--- a/igniteap/templates/uifiles/about.html
+++ b/igniteap/templates/uifiles/about.html
@@ -172,7 +172,7 @@ landscape as a whole.
 
 <!--== Start Service Area Wrapper ==-->
 <div class="service-area-wrapper">
-    <div class="service-area-top parallax" data-parallax-speed="0.75" data-bg="{% static 'assets/img/service/service-bg.jpg">
+    <div class="service-area-top parallax" data-parallax-speed="0.75" data-bg="{% static 'assets/img/service/service-bg.jpg' %}">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xl-5 m-auto text-center">
@@ -509,7 +509,7 @@ landscape as a whole.
                 <div class="col-md-6 col-lg-6">
                     <div class="blog-item">
                         <div class="blog-content">
-                            <h2 class="h5"><a href="blog-details.html">Project Expo</a></h2>
+                            <h2 class="h5"><a href="">Project Expo</a></h2>
                             <p>A Project Expo is a platform for showcasing innovative projects and ideas, promoting 
                                 collaboration, and inspiring future innovations across various fields </p>
     
@@ -524,7 +524,7 @@ landscape as a whole.
                 <div class="col-md-6 col-lg-6">
                     <div class="blog-item">
                         <div class="blog-content">
-                            <h2 class="h5"><a href="blog-details.html">Startup Expo</a></h2>
+                            <h2 class="h5"><a href="">Startup Expo</a></h2>
                             <p>A Startup Expo is an energetic event celebrating entrepreneurship and innovation, where 
                                 emerging businesses and startups showcase their offerings to a diverse audience. </p>
     
@@ -539,7 +539,7 @@ landscape as a whole.
                 <div class="col-md-6 col-lg-6">
                     <div class="blog-item">
                         <div class="blog-content">
-                            <h2 class="h5"><a href="blog-details.html">Investor Pitch</a></h2>
+                            <h2 class="h5"><a href="">Investor Pitch</a></h2>
                             <p>An Investor Pitch Event is a crucial occasion where startups pitch their business ideas to 
                                 potential investors.</p>
     
@@ -553,7 +553,7 @@ landscape as a whole.
                 <div class="col-md-6 col-lg-6">
                     <div class="blog-item">
                         <div class="blog-content">
-                            <h2 class="h5"><a href="blog-details.html">Idea Pitch</a></h2>
+                            <h2 class="h5"><a href="">Idea Pitch</a></h2>
                             <p>An Idea Pitch is a succinct presentation that introduces and advocates for a new concept or 
                                 project. </p>
     
