--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -124,7 +124,7 @@
         </div>
     </div>
 
-    <div class="footer-widget-area sm-top-wt">
+    <div class="footer-widget-area sm-top-wt pb-3">
         <div class="container">
             <div class="row mtn-40">
                 <div class="col-lg-4 order-4 order-lg-0">
