--- a/igniteap/templates/uifiles/collaborations.html
+++ b/igniteap/templates/uifiles/collaborations.html
@@ -22,7 +22,7 @@
 <!--== End Page Header Area ==-->
 
 <!--== Start Contact Page Area Wrapper ==-->
-<div class="contact-page-area-wrapper sp-y">
+<div class="contact-page-area-wrapper sp-y mt-5">
     <div class="container">
         <div class="contact-content-wrap">
             <div class="row">
@@ -108,7 +108,7 @@
                                             </label>
                                         </div>
         
-                                        <div class="col-6 mt-2" id="ifYes1">
+                                        <div class="col-7 mt-4" id="ifYes1">
                                             <input type="text" name="ifYes" class="form-control" id="ifYes"
                                                 placeholder="write detail what are looking for">
                                         </div>
