--- a/igniteap/templates/uifiles/login.html
+++ b/igniteap/templates/uifiles/login.html
@@ -4,7 +4,7 @@
 
 
 <!--== Start Page Header Area ==-->
-<div class="page-header-area bg-img" data-bg="{% static 'assets/img/login.png' %}">
+<div class="page-header-area bg-img" data-bg="{% static 'assets/img/logout.png' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-8 m-auto text-center">
@@ -22,7 +22,7 @@
 <!--== End Page Header Area ==-->
 
 <!--== Start Contact Page Area Wrapper ==-->
-<div class="contact-page-area-wrapper sp-y">
+<div class="contact-page-area-wrapper sp-y mt-5">
     <div class="container">
         <div class="contact-content-wrap">
             <div class="row">
