--- a/igniteap/templates/uifiles/user-registration.html
+++ b/igniteap/templates/uifiles/user-registration.html
@@ -22,7 +22,7 @@
 <!--== End Page Header Area ==-->
 
 <!--== Start Contact Page Area Wrapper ==-->
-<div class="contact-page-area-wrapper sp-y">
+<div class="contact-page-area-wrapper sp-y mt-5">
     <div class="container">
         <div class="contact-content-wrap">
             <div class="row">
@@ -31,8 +31,8 @@
                         <h3 style="color: #0e0067;">User Registration</h3>
 
                         <div class="contact-form-wrap">
-                            <form action="#" method="post" id="register-form" >
-                                  {% csrf_token %}
+                            <form action="#" method="post" id="register-form">
+                                {% csrf_token %}
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="single-input-item">
