--- a/igniteap/static/assets/css/timeline.css
+++ b/igniteap/static/assets/css/timeline.css
@@ -461,3 +461,69 @@ Main components
 .widget-item address{
   font-size: 18px;
 }
+
+.slick-dots{
+  /* display: -webkit-box; */
+  /* display: -ms-flexbox; */
+  display: flex;
+  margin-top: 20px !important;
+  /* -webkit-box-pack: center; */
+  /* -ms-flex-pack: center; */
+  /* justify-content: center; */
+  height: 12px;
+  padding-bottom: 25px !important;
+}
+
+.service-area-top{
+  padding: 110px 0 50px !important;
+    position: relative;
+    z-index: 1;
+}
+
+.sm-top{
+  margin-top: 80px !important;
+}
+
+.sm-top2{
+  margin-top: -50px;
+  padding-bottom: 80px !important;
+}
+
+input{
+  margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    display: block;
+}
+
+label {
+  display: inline-block;
+  margin-right: 10px !important;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius:20px !important;
+  height: 50px !important;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.about-thumb img{
+  width: 100%;
+  /* -webkit-transition: 0.4s; */
+  transition: 0.4s;
+  margin-top: 65px !important;
+}
