--- a/igniteap/templates/uifiles/contact.html
+++ b/igniteap/templates/uifiles/contact.html
@@ -22,7 +22,7 @@
 <!--== End Page Header Area ==-->
 
 <!--== Start Contact Page Area Wrapper ==-->
-<div class="contact-page-area-wrapper sp-y">
+<div class="contact-page-area-wrapper sp-y mt-5">
     <div class="container">
         <div class="contact-content-wrap">
             <div class="row">
