--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -241,7 +241,7 @@
 </div> -->
 <div class="service-area-wrapper sm-top-wt pb-5">
   
-        <div class="container mb-5" >
+        <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xl-5 m-auto text-center">
                     <div class="about-content">
