--- a/igniteap/templates/uifiles/student-idea-submission.html
+++ b/igniteap/templates/uifiles/student-idea-submission.html
@@ -23,7 +23,7 @@
 
 
 
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5 mt-5 mb-5">
     <table class="table table-bordered ">
         <thead>
           <tr>
