--- a/igniteap/templates/uifiles/login.html
+++ b/igniteap/templates/uifiles/login.html
@@ -4,7 +4,7 @@
 
 
 <!--== Start Page Header Area ==-->
-<div class="page-header-area bg-img" data-bg="{% static 'assets/img/logout.png' %}">
+<div class="page-header-area bg-img" data-bg="{% static 'assets/img/login.jpg' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-8 m-auto text-center">
