--- a/igniteap/templates/uifiles/user-registration.html
+++ b/igniteap/templates/uifiles/user-registration.html
@@ -31,7 +31,7 @@
                         <h3 style="color: #0e0067;">User Registration</h3>
 
                         <div class="contact-form-wrap">
-                            <form action="#" method="post" id="register-form">
+                            <form  method="post" id="register-form">
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-md-6">
