--- a/igniteap/templates/uifiles/user-registration.html
+++ b/igniteap/templates/uifiles/user-registration.html
@@ -71,7 +71,7 @@
                                     <div class="col-md-6">
                                         <div class="single-input-item">
                                             <label>
-                                                <input type="text" id="username" name="username" id="username" placeholder="user name *" required/>
+                                                <input type="text" name="username" id="username" placeholder="user name *" required/>
                                             </label>
                                         </div>
                                     </div>
