--- a/igniteap/templates/uifiles/user-registration.html
+++ b/igniteap/templates/uifiles/user-registration.html
@@ -60,14 +60,6 @@
                                         </div>
                                     </div>
 
-                                    <!-- <div class="col-md-6">
-                                        <div class="single-input-item">
-                                            <label>
-                                                <input type="text" name="phone_no" placeholder="Your Phone"/>
-                                            </label>
-                                        </div>
-                                    </div> -->
-
                                     <div class="col-md-6">
                                         <div class="single-input-item">
                                             <label>
@@ -93,7 +85,7 @@
                                     </div>
 
                                     <div class="single-input-item mb-0 mt-40">
-                                        <button type="submit" id="register-button" class="btn-outline">Register</button>
+                                        <button type="button" id="register-button" class="btn-outline">Register</button>
                                     </div>
 
                                 </div>
