event  slugs fixed

--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -70,8 +70,9 @@
                         <li class="has-submenu"><a href="/">Home</a></li>
                         <li class="has-submenu"><a href="/about/">About Us</a></li>
                         <li class="has-submenu"><a href="/speakers/">Speakers</a></li>
-                        <li class="has-submenu"><a href="/partners/">Partners</a></li>
-                        <li><a href="/contact/">Contact</a></li>
+                        <!-- <li class="has-submenu"><a href="/partners/">Partners</a></li> -->
+                        <li class="has-submenu1"><a href="/events/">Events</a></li>
+                        <li class="has-submenu1"><a href="/contact/">Contact</a></li>
                     </ul>
                 </div>
                 <!-- End Navigation Area -->
@@ -153,6 +154,7 @@
                                 <li><a href="/">Home</a></li>
                                 <li><a href="/about/">About Us</a></li>
                                 <li><a href="/contact/">Contact</a></li>
+                                <li><a href="/events/">Events</a></li>
                                 <!-- <li><a href="#">Careers</a></li> -->
                             </ul>
                         </div>
