--- a/igniteap/templates/uifiles/speakers.html
+++ b/igniteap/templates/uifiles/speakers.html
@@ -23,101 +23,21 @@
 <div class="team-page-area-wrapper bg-offwhite sp-y sm-top">
     <div class="container">
         <div class="row mtn-30">
+            {%for item in speakers %}
             <div class="col-sm-6 col-lg-3">
                 <div class="team-mem-item">
                     <figure class="member-pic">
                         <img src="{% static 'assets/img/team/01.jpg' %}" alt="Team-Businex">
                     </figure>
                     <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">Lucy Farnando</a></h5>
-                        <span class="designation">CTO &amp; Founder</span>
+                        <h5><a href="#" class="stretched-link">{{item.name}}</a></h5>
+                        <span class="designation">CTO &amp; Founder</span><br/>
+                        <span class="designation"><a href="#" class="stretched-link"><i class="mdi mdi-linkedin"></i></a></span>
                     </div>
                 </div>
             </div>
+            {% endfor %}
 
-            <div class="col-sm-6 col-lg-3">
-                <div class="team-mem-item">
-                    <figure class="member-pic">
-                        <img src="{% static 'assets/img/team/02.jpg' %}" alt="Team-Businex">
-                    </figure>
-                    <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">James Anderson</a></h5>
-                        <span class="designation">Creative Head</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-lg-3">
-                <div class="team-mem-item">
-                    <figure class="member-pic">
-                        <img src="{% static 'assets/img/team/03.jpg' %}" alt="Team-Businex">
-                    </figure>
-                    <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">Thomas Nancy</a></h5>
-                        <span class="designation">Marketing Head</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-lg-3">
-                <div class="team-mem-item">
-                    <figure class="member-pic">
-                        <img src="{% static 'assets/img/team/04.jpg' %}" alt="Team-Businex">
-                    </figure>
-                    <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">Nail Mathue</a></h5>
-                        <span class="designation">Head of Research</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-lg-3">
-                <div class="team-mem-item">
-                    <figure class="member-pic">
-                        <img src="{% static 'assets/img/team/05.jpg' %}" alt="Team-Businex">
-                    </figure>
-                    <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">Lucy Farnando</a></h5>
-                        <span class="designation">CTO &amp; Founder</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-lg-3">
-                <div class="team-mem-item">
-                    <figure class="member-pic">
-                        <img src="{% static 'assets/img/team/06.jpg' %}" alt="Team-Businex">
-                    </figure>
-                    <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">James Anderson</a></h5>
-                        <span class="designation">Creative Head</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-lg-3">
-                <div class="team-mem-item">
-                    <figure class="member-pic">
-                        <img src="{% static 'assets/img/team/01.jpg' %}" alt="Team-Businex">
-                    </figure>
-                    <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">Thomas Nancy</a></h5>
-                        <span class="designation">Marketing Head</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-lg-3">
-                <div class="team-mem-item">
-                    <figure class="member-pic">
-                        <img src="{% static 'assets/img/team/02.jpg' %}" alt="Team-Businex">
-                    </figure>
-                    <div class="member-info">
-                        <h5><a href="team-details.html" class="stretched-link">Nail Mathue</a></h5>
-                        <span class="designation">Head of Research</span>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
