--- a/igniteap/static/assets/css/timeline.css
+++ b/igniteap/static/assets/css/timeline.css
@@ -595,10 +595,10 @@ label {
  
   #feedbackDrawer {
     background: #0f0167; /* #d3d3d3; */
-    border: 2px solid #fd9007;
+    border: none;
     border-right: none;
-    box-shadow: 1px 1px #d3d3d3, -1px 1px #d3d3d3, -1px -1px #d3d3d3,
-      1px -1px #d3d3d3;
+    /* box-shadow: 1px 1px #d3d3d3, -1px 1px #d3d3d3, -1px -1px #d3d3d3,
+      1px -1px #d3d3d3; */
     font-family: "PT Sans", sans-serif;
     height: auto;
     min-height: 160px;
@@ -628,12 +628,17 @@ label {
   #feedbackDrawer.loading {
     background: #d3d3d3 url(images/loading.gif) no-repeat center center;
   }
-  #feedbackDrawer.isie {
+  /* #feedbackDrawer.isie {
     outline: 1px solid #d3d3d3;
-  }
+  } */
   #feedbackForm {
     padding: 16px;
   }
+
+#feedbackForm form p{
+  color: white !important;
+}
+
   #feedbackForm .field {
     /* border: 2px solid #ccc; */
     border-radius: 3px;
@@ -662,7 +667,7 @@ label {
     margin-top: 0.2em;
     background: #fcfcfc;
     padding: 0.5em;
-    border: 0.2em solid red;
+    /* border: 0.2em solid red; */
     border-color: rgba(256, 0, 0, 0.5);
     white-space: nowrap;
     min-width: 245px;
