--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -363,22 +363,14 @@ function ajaxToggleForm(toggle) {
 
 function createFeedbackForm() {
   var url = document.location;
-  feedSessInfo = {
-    userId: "123456789",
-    userName: "AJ Webb",
-    userCompany: "Company XYZ",
-    userEmail: "aj.webb@companyxyz.com",
-    admin: "#"
-  };
-
+ 
   //create drawer
   var $drawer = '<div id="feedbackDrawer">';
   //create form
   $drawer += '<div id="feedbackForm">';
   $drawer += "<form>";
-  $drawer += "<h2>Submit Feedback123</h2>";
-  
- 
+  $drawer += "<h2>New Event</h2>";
+  $drawer += "<p>Ignite isn't merely a word, nor is it just another event; it embodies a metaphor for igniting creativity, enthusiasm, and innovation.</p>";
   $drawer += "<button>Download</button>";
   $drawer += "</form>";
   $drawer += "</div>";
@@ -395,9 +387,7 @@ function createFeedbackForm() {
 
   //set global vars
   $feedDrawer = $("#feedbackDrawer");
-  $feedError = $("#feedbackError");
   $feedForm = $("#feedbackForm");
-  $feedSuccess = $("#feedbackSuccess");
   $feedTrigger = $("#feedbackTrigger");
 }
 
@@ -425,144 +415,18 @@ function showDrawer() {
 
 
 function submitFeedback() {
-  var pdfFileName = 'igniteap/pdf/IGNITE__AP_Website_1_2.pdf';
+  var pdfFileName = '/downloadbroacher/';  
   console.log("File Path:", pdfFileName);
   var downloadLink = document.createElement('a');
   downloadLink.href = pdfFileName;
-  downloadLink.download = 'IGNITE__AP_Website_1_2.pdf';
+  downloadLink.download = 'IGNITE_AP_Website.pdf';
   document.body.appendChild(downloadLink);
   downloadLink.click();
   document.body.removeChild(downloadLink);
 }
 
-// function submitFeedback() {
-//   if ($feedForm.find("form").valid()) {
-//     var formData = $(this).serialize();
-//     ajaxToggleForm({ on: false, reset: false });
-//     $.ajax({
-//       type: "POST",
-//       url: feedSessInfo.admin,
-//       data: formData,
-//       success: function (result) {
-//         // console.log(result);
-//         var data = JSON.parse(result);
-//         if (data.status == "success") {
-//           $feedDrawer.removeClass("loading");
-//           $feedSuccess.show();
-//         } else {
-//           //TODO: Show the error message returned
-//           $feedDrawer.removeClass("loading");
-//           $feedError.show();
-//         }
-//       },
-//       error: function (result, resultTxt, errorMsg) {
-//         // console.log([result, resultTxt, errorMsg]);
-//         $feedDrawer.removeClass("loading");
-//         $feedError.show();
-//       }
-//     });
-//   }
-//   return false;
-// }
-
-// function validateFeedback($form) {
-//   $form.validate({
-//     focusInvalid: false,
-//     ignore: ":hidden .ignore",
-//     rules: {
-//       description: {
-//         required: true,
-//         maxlength: 50
-//       },
-//       details: {
-//         required: false,
-//         maxlength: 3500
-//       }
-//     },
-//     messages: {
-//       description: {
-//         required: "Short Description is required",
-//         maxlength: "Please limit your description to {0} characters"
-//       },
-//       details: {
-//         maxlength: "Please limit Idea Details to {0} characters"
-//       }
-//     },
-//     errorPlacement: function (error, element) {
-//       error.insertBefore(element);
-//     },
-//     highlight: function (element, errorClass) {
-//       $(element).addClass(errorClass);
-//       $("label ." + errorClass).removeProp("style");
-//     },
-//     unhighlight: function (element, errorClass) {
-//       $(element).removeClass(errorClass);
-//     }
-//   });
-// }
-// </script>
-
-
-
-<!--=== REVOLUTION JS ===-->
+</script>
 <script src="{% static 'assets/js/revslider/rev-active.js' %}"></script>
-<!-- <script>
-        function updateCountdown() {
-          var countdownDate = new Date("November 19, 2023 00:00:00").getTime();
-          var now = new Date().getTime();
-          var timeRemaining = countdownDate - now;
-        
-          if (timeRemaining <= 0) {
-            document.querySelector(".clock").innerHTML = "Countdown expired!";
-            return;
-          }
-        
-          var days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
-          var hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-          var minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
-          var seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
-        
-          updateContainer(document.querySelector(".days"), days.toString());
-          updateContainer(document.querySelector(".hours"), hours.toString());
-          updateContainer(document.querySelector(".minutes"), minutes.toString());
-          updateContainer(document.querySelector(".seconds"), seconds.toString());
-        }
-        
-        function updateContainer(container, newTime) {
-          var time = newTime.split("");
-        
-          if (time.length === 1) {
-            time.unshift("0");
-          }
-        
-          var first = container.firstElementChild;
-          if (first.lastElementChild.textContent !== time[0]) {
-            updateNumber(first, time[0]);
-          }
-        
-          var last = container.lastElementChild;
-          if (last.lastElementChild.textContent !== time[1]) {
-            updateNumber(last, time[1]);
-          }
-        }
-        
-        function updateNumber(element, number) {
-          var second = element.lastElementChild.cloneNode(true);
-          second.textContent = number;
-        
-          element.appendChild(second);
-          element.classList.add("move");
-        
-          setTimeout(function () {
-            element.classList.remove("move");
-          }, 990);
-          setTimeout(function () {
-            element.removeChild(element.firstElementChild);
-          }, 990);
-        }
-        
-        setInterval(updateCountdown, 1000);
-        </script> -->
 </body>
 
 </html>
