change regirster page

--- a/igniteap/templates/uifiles/student-idea-submission.html
+++ b/igniteap/templates/uifiles/student-idea-submission.html
@@ -23,13 +23,13 @@
 
 
 
-<div class="container-fluid pt-5 mt-5 mb-5">
+<div class="container pt-5 mt-5 mb-5">
     <table class="table table-bordered ">
         <thead>
           <tr>
             <th scope="col">Name</th>
-            <th scope="col">Email</th>
-            <th scope="col">Phone</th>
+            <!-- <th scope="col">Email</th>
+            <th scope="col">Phone</th> -->
             <th scope="col">Status</th>
             <th scope="col">Reason</th>
             <th scope="col">Idea Description</th>
@@ -44,8 +44,8 @@
             {% for item in student_submit %}
           <tr>
             <td>{{item.Firstname}} {{ item.Lastname }}</td>
-            <td>{{item.Email}}</td>
-            <td>{{item.Phone}}</td>
+            <!-- <td>{{item.Email}}</td>
+            <td>{{item.Phone}}</td> -->
             <td>{{item.Approved}}</td>
             <td>{{item.Reason}}</td>
             <td>{{item.Idea_Description}}</td>
