--- a/igniteap/templates/uifiles/about.html
+++ b/igniteap/templates/uifiles/about.html
@@ -645,49 +645,7 @@ landscape as a whole.
     </div>
 </div>
 
-<!-- <div class="feature-area-wrapper sm-top">
-    <div class="container">
-        <div class="row mtn-sm-60 mtn-md-5">
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/01.png' %}" alt="Businex-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Creative Team</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/02.png' %}" alt="Businex-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Best Service</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="icon-box-item">
-                    <div class="icon-box__icon">
-                        <img src="{% static 'assets/img/feature/03.png' %}" alt="Businex-Feature"/>
-                    </div>
-                    <div class="icon-box__info">
-                        <h5>Online Support</h5>
-                        <p>We have creative team, they always ready to help you. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-<div class="team-area-wrapper bg-img sp-y" style="background-color: #0f0168;">
+<div class="team-area-wrapper bg-img-two sp-y" style="background-color: #0f0168;">
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-lg-4">
@@ -748,118 +706,11 @@ landscape as a whole.
     </div>
 </div>
 
-<!-- <div class="fun-fact-area sm-top5 parallax" data-parallax-speed="0.70" data-bg="{% static 'assets/img/fun-fact-bg.jpg">
-    <div class="container">
-        <div class="row mtn-40">
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">3600</span>+</h2>
-                    <h6 class="counter-txt">IDEAS</h6>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">40</span>+</h2>
-                    <h6 class="counter-txt">COLLEGES</h6>
-                </div>
-            </div>
-
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">280</span>+</h2>
-                    <h6 class="counter-txt">IDEAS FINALIZED</h6>
-                </div>
-            </div>
 
 
-            <div class="col-6 col-md-3 text-center">
-                <div class="counter-item">
-                    <h2 class="counter-number"><span class="counter">18</span>+</h2>
-                    <h6 class="counter-txt">STARTUPS SUPPORTED</h6>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
 
-<!--== Start Brand Logo Area Wrapper ==-->
-<!-- <div class="brand-logo-area sm-top">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="brand-logo-content slick-row-20">
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/01.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
 
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/02.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
 
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/03.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
 
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/04.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/05.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/03.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/01.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-<!-- <div class="brand-logo-area sm-top4">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="brand-logo-content slick-row-20">
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/01.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/02.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/03.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/04.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/05.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/03.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-
-                    <div class="brand-logo-item">
-                        <a href="#"><img src="{% static 'assets/img/brand-logo/01.png' %}" alt="Ignite-Logo"/></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-<!--== End Brand Logo Area Wrapper ==-->
 
 {% endblock%}
