--- a/igniteap/static/assets/css/timeline.css
+++ b/igniteap/static/assets/css/timeline.css
@@ -808,6 +808,18 @@ label {
     width: 100% ;
     height: 25vh;
 }
+.bg-img-two {
+  /* background: no-repeat center center; */
+  background-size: cover;
+  background-position: bottom center;
+  width: 100% ;
+  height: 25vh;
+}
+.bg-img-two {
+  background: no-repeat center center;
+  background-size: cover;
+}
+
 .page-header-content h2 {
   color: #FFFFFF;
   font-size: 3.4375rem;
