--- a/igniteap/static/assets/homecss/main.css
+++ b/igniteap/static/assets/homecss/main.css
@@ -461,8 +461,7 @@ px
 /* clock */
 
 .clock {
-    height:65px;
-    
+    height:90px;
     /* color: #563B56; */
     color: #FFFFFF;
     font-size: 65px!important;
@@ -475,14 +474,6 @@ px
     overflow: hidden;
   }
   
-  /* .clock::before, .clock::after {
-    content: '';
-    width: 280px;
-    height:30px;
-    background: linear-gradient(to top, transparent, black);
-    position: absolute;
-    z-index: 2;
-  } */
   .clock::after {
     bottom: 0;
     background: linear-gradient(to bottom, transparent, black);
@@ -559,21 +550,18 @@ px
   .labels div:nth-child(4) p {
     color: #FFFFFF;
     font-size: large;
-    /* margin: 0 15px; */
-    margin:0px 0px 0px 25px;
+    margin:0px 0px 0px 35px;
   }
   
   @media only screen and (min-width: 320px) and (max-width: 560px) {
     .clock {
-      /* background-color: red; */
-      /* margin-left: 26px; */
-      /* margin-left:2%; */
+      height:60px;
+      margin-left: 26px; 
+      margin-left:2%;
       display:flex;
       max-width: 300px!important;
       justify-content: center;
      
-   
-      
     }
     .youtube-video{
       height:200px!important;
@@ -583,24 +571,21 @@ px
       bottom: 14%!important;
     }
     .labels div:nth-child(1) p {
-      color: #6a5168;
-      
-      margin:0 12px;
+      color: #f5eef4;
+      /* margin:0 1px; */
+      margin-left: 50px;
     }
     
     .labels div:nth-child(2) p {
-      color: #6a5168;
-      
+      color: #f5eef4;
       margin: 0 35px;
     }
     .labels div:nth-child(3) p {
-      color: #6a5168;
-     
+      color: #f5eef4;
       margin: 0 5px;
     }
     .labels div:nth-child(4) p {
-      color: #6a5168;
-     
+      color: #f5eef4;
       margin: 0 19px;
     }
     .d-flex.labels{
@@ -611,13 +596,13 @@ px
   }
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .timmer-block {
-      /* background-color: red; */
-      margin-left: 190px;
+      margin-left: 100px;
     }
     .clock .days{
       border:3px solid #ebb4c0;
       border:5px solid #fc9616;
-  }
+    }
+   
 }
   
   .number{
@@ -625,7 +610,6 @@ px
   }
 
 .panelist-card{
-  /* border: 1px solid black; */
   margin-bottom: 10px;
   width: auto;
   width: 300px;
