--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -86,17 +86,15 @@
                                 <p>Seconds</p>
                             </div>
                         </div>
-                        <button class="btn btn-primary"  target="_blank"  href=""><a href="{{ EventTimer.Upload_url }}">Read More</a></button>
+                        <button class="btn btn-primary"  href=""><a href="{{ EventTimer.Upload_url }}">Read More</a></button>
                 
                         </div> 
-                        
                 </li>
                 {% endif %}
                 <!-- end SLIDE  -->
              
             
             </ul>
-            <!-- <div class="tp-bannertimer tp-bottom"></div> -->
         </div>
     </div>
 </div>
@@ -197,8 +195,6 @@
 </div>
 
 
-
-<!-- <div class="feature-area-wrapper sm-top">
     <div class="container">
         <div class="row mtn-sm-40 mtn-md-5">
             <div class="col-md-4">
