fixed footer and new event

--- a/igniteap/templates/uifiles/contact.html
+++ b/igniteap/templates/uifiles/contact.html
@@ -94,8 +94,8 @@
 
                             <div class="widget-item m-0">
                                 <address>
-                                    C/o Totalfresh H.O Above Indian Bank, Gowthama Budha Road, Mangalagiri, Andhra Pradesh 522503 <br>info@igniteap.com
-<br>+91 91330 63307
+                                    C/o H.O Above Indian Bank, Gowthama Budha Road, Mangalagiri, Andhra Pradesh 522503 <br>info@igniteap.com
+<br>+91 91330 63307 ,6304446078
                                     
                                 </address>
                             </div>
