--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -165,7 +165,7 @@
                                     <script>
                                         document.write(new Date().getFullYear())
                                     </script>
-                                    All Rights Reserved by Ignite AP <br> Developed by DT7 Solutions
+                                    All Rights Reserved by Ignite AP <br> Developed by <a href="https://dt7solutions.com/" target="_blank">DT7 Solutions</a>
                                 </p>
                             </div>
                         </div>
